--- a/src/assets/scss/creditpadi-auth.scss
+++ b/src/assets/scss/creditpadi-auth.scss
@@ -30,6 +30,35 @@
           padding: 0.25rem 1rem;
         }
       }
+
+      .or-separator {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-sizing: border-box;
+        box-sizing: border-box;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        align-items: center;
+        padding: 0 4px;
+
+        .or-text {
+          font-size: 1rem;
+          line-height: 1.42857;
+          font-weight: 400;
+          color: rgba(0, 0, 0, 0.6);
+          margin: 0 12px;
+          white-space: nowrap;
+        }
+      }
+
+      .or-separator::after,
+      .or-separator::before {
+        content: "";
+        width: 50%;
+        height: 1px;
+        background-color: rgba(0, 0, 0, 0.15);
+      }
     }
   }
 }
