--- a/src/assets/scss/creditpadi-admin.scss
+++ b/src/assets/scss/creditpadi-admin.scss
@@ -10,6 +10,7 @@
     width: 280px;
     line-height: 1;
     color: #012970;
+    font-style: italic;
   }
 
   .toggle-sidebar-btn {
@@ -41,12 +42,107 @@
 
 }
 
-// @media (min-width: 1200px) {
-//   .logo {
-//     width: 280px;
-//   }
-// }
+a {
+  color: #4154f1;
+  text-decoration: none;
+}
 
-// .logo {
-//   line-height: 1;
-// }
+.sidebar {
+  position: fixed;
+  top: 60px;
+  left: 0;
+  bottom: 0;
+  width: 300px;
+  z-index: 996;
+  transition: all 0.3s;
+  padding: 20px;
+  overflow-y: auto;
+  scrollbar-width: thin;
+  scrollbar-color: #aab7cf transparent;
+  box-shadow: 0px 0px 20px rgb(1 41 112 / 10%);
+  background-color: #fff;
+
+  .sidebar-nav {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+
+    .nav-item {
+      margin-bottom: 5px;
+    }
+
+    li {
+      padding: 0;
+      margin: 0;
+      list-style: none;
+    }
+
+    .nav-link {
+      display: flex;
+      align-items: center;
+      font-size: 15px;
+      font-weight: 600;
+      // color: #4154f1;
+      transition: 0.3;
+      background: #f6f9ff;
+      padding: 10px 15px;
+      border-radius: 4px;
+
+      i {
+        font-size: 16px;
+        margin-right: 10px;
+        color: #4154f1;
+      }
+
+      &.collapsed {
+        color: #012970;
+        background: #fff;
+
+        i {
+          color: #899bbd;
+        }
+      }
+
+      .bi-chevron-down {
+        margin-right: 0;
+        transition: transform 0.2s ease-in-out;
+      }
+
+      &:hover {
+        i {
+          color: #4154f1;
+        }
+      }
+
+      &:not(.collapsed) .bi-chevron-down {
+        transform: rotate(180deg);
+      }
+    }
+
+    .nav-content {
+      padding: 5px 0 0 0;
+      margin: 0;
+      list-style: none;
+
+      a {
+        display: flex;
+        align-items: center;
+        font-size: 14px;
+        font-weight: 600;
+        color: #012970;
+        transition: 0.3;
+        padding: 10px 0 10px 40px;
+        transition: 0.3s;
+
+        i {
+          font-size: 6px;
+          margin-right: 8px;
+          line-height: 0;
+          border-radius: 50%;
+        }
+      }
+    }
+
+
+  }
+}
