--- a/src/assets/scss/creditpadi-admin.scss
+++ b/src/assets/scss/creditpadi-admin.scss
@@ -15,7 +15,7 @@
 
   .toggle-sidebar-btn {
     font-size: 28px;
-    padding-left: 10px;
+    padding-left: 0.5rem;
     cursor: pointer;
     color: #012970;
   }
@@ -52,15 +52,19 @@ a {
   top: 60px;
   left: 0;
   bottom: 0;
-  width: 300px;
+  width: 250px;
   z-index: 996;
   transition: all 0.3s;
-  padding: 20px;
+  padding: 20px 10px;
   overflow-y: auto;
   scrollbar-width: thin;
   scrollbar-color: #aab7cf transparent;
   box-shadow: 0px 0px 20px rgb(1 41 112 / 10%);
-  background-color: #fff;
+  background-color: #F2F2F2;
+
+  &.sidebar-nav-collapsed {
+    width: 80px;
+  }
 
   .sidebar-nav {
     padding: 0;
@@ -84,7 +88,7 @@ a {
       font-weight: 600;
       // color: #4154f1;
       transition: 0.3;
-      background: #f6f9ff;
+      // background: #f6f9ff;
       padding: 10px 15px;
       border-radius: 4px;
 
