Update: Toggle side bar function

--- a/src/assets/scss/creditpadi-admin.scss
+++ b/src/assets/scss/creditpadi-admin.scss
@@ -55,7 +55,7 @@ a {
   width: 250px;
   z-index: 996;
   transition: all 0.3s;
-  padding: 20px 10px;
+  padding: 2rem 0 10rem;
   overflow-y: auto;
   scrollbar-width: thin;
   scrollbar-color: #aab7cf transparent;
@@ -73,6 +73,14 @@ a {
 
     .nav-item {
       margin-bottom: 5px;
+
+      &:hover {
+        background-color: white;
+      }
+
+      &.active {
+        background-color: white;
+      }
     }
 
     li {
@@ -146,7 +154,40 @@ a {
         }
       }
     }
+  }
 
+  &::-webkit-scrollbar-track {
+    border-radius: 10px;
+    padding: 2px 0;
+    background-color: #555555;
+  }
 
+  &::-webkit-scrollbar {
+    width: 5px;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    background-color: #c7c7c7;
+  }
+}
+
+.maincontent {
+  margin-top: 60px;
+  margin-left: 250px;
+  padding: 2rem;
+
+  &.sidebar-nav-collapsed {
+    margin-left: 80px;
+  }
+
+}
+
+.footer {
+  margin-left: 250px;
+
+  &.sidebar-nav-collapsed {
+    margin-left: 80px;
   }
 }
